2007-12-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbConnection.cs: Don't
	subclass from QueuedSqliteDatabase.

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Revert changes made when I switched to QueuedSqliteDatabase.

	* src/Core/Banshee.Services/Banshee.Library/LibraryImportManager.cs: Sort
	whitelist in static constructor.

	* src/Core/Banshee.Services/Banshee.Playlist/PlaylistSource.cs:
	Temporarily comment out some queries.

2007-11-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Prevent
	crashing when a TrackInfo is null.

2007-11-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Widgets/Banshee.Widgets/RatingEntry.cs:
	* src/Core/Banshee.Widgets/Banshee.Widgets/RatingMenuItem.cs: Whitespace.

2007-11-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs:
	* src/Core/Banshee.Widgets/Banshee.Widgets/RatingActionProxy.cs:
	* src/Core/Banshee.Widgets/Banshee.Widgets/RatingEntry.cs: If all the
	selected tracks have the same rating, prepopulate it.  Actually set the
	Rating on all the tracks when Activated.

2007-11-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Banshee.Base/*:
	* src/Core/Banshee.Core/Banshee.Collection/*: White space and license
	header cleanup.

2007-11-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs:
	Activate the TrackPopupAction instead of showing the popup manual
	manually.

	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Add
	and handle RateTracksAction and TrackPopupAction.

	* src/Core/Banshee.Widgets/Banshee.Widgets/ComplexMenuItem.cs:
	* src/Core/Banshee.Widgets/Banshee.Widgets/RatingMenuItem.cs: Update
	license header, override OnAdded and OnRemoved to allow using with
	Gtk.UIManager.
